--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "chalk": "^2.4.1",
     "debug": "^3.1.0",
     "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
@@ -26,7 +27,9 @@
     "nodemon": "^1.18.4"
   },
   "nodemonConfig": {
-    "ignore": ["node_modules/**/node_modules"],
+    "ignore": [
+      "node_modules/**/node_modules"
+    ],
     "delay": "2500",
     "env": {
       "NODE_ENV": "development",
