--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "debug": "^3.1.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "pug": "^2.0.3"
